refactor + testing on annotations that are close together

--- a/notebooks/Bitmoji_Parser.ipynb
+++ b/notebooks/Bitmoji_Parser.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -23,11 +23,12 @@
       "text/plain": [
        "['../data/input/user106_341.jpg',\n",
        " '../data/input/user106_346.jpg',\n",
+       " '../data/input/user147_2362.jpg',\n",
        " '../data/input/test1.jpg',\n",
        " '../data/input/user99_310.jpg']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +64,11 @@
     "    masked_img = cv2.bitwise_and(hsv_img, hsv_img, mask = mask)\n",
     "    # Converting the image to grayscale helps with the findContours function\n",
     "    masked_grey = cv2.cvtColor(masked_img, cv2.COLOR_BGR2GRAY)\n",
-    "    contours, hierarchy = cv2.findContours(masked_grey,cv2.RETR_EXTERNAL,cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    # Adding a bit of blur and then thresholding helps reduce noise\n",
+    "    blurred = cv2.blur(masked_grey, (3,3))\n",
+    "    #Apply thresholding to the image\n",
+    "    ret, thresholded = cv2.threshold(blurred, 1, 255, cv2.THRESH_OTSU)\n",
+    "    contours, hierarchy = cv2.findContours(thresholded,cv2.RETR_EXTERNAL,cv2.CHAIN_APPROX_SIMPLE)\n",
     "    bounding_boxes = [cv2.boundingRect(c) for c in contours]\n",
     "    return bounding_boxes\n",
     "\n",
@@ -90,16 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/input/user106_341.jpg 35 -> 3\n",
-      "../data/input/user106_346.jpg 9 -> 7\n",
-      "../data/input/test1.jpg 216 -> 4\n",
+      "../data/input/user106_341.jpg 4 -> 3\n",
+      "../data/input/user106_346.jpg 8 -> 7\n",
+      "../data/input/user147_2362.jpg 32 -> 11\n",
+      "../data/input/test1.jpg 22 -> 5\n",
       "../data/input/user99_310.jpg 0 -> 0\n"
      ]
     }
