added pink to parser

--- a/notebooks/Bitmoji_Parser.ipynb
+++ b/notebooks/Bitmoji_Parser.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        " '../data/input/user99_310.jpg']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,35 +95,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/input/user106_341.jpg 4 -> 3\n",
-      "../data/input/user106_346.jpg 8 -> 7\n",
-      "../data/input/user147_2362.jpg 32 -> 11\n",
-      "../data/input/test1.jpg 22 -> 5\n",
-      "../data/input/user99_310.jpg 0 -> 0\n"
+      "../data/input/user106_341.jpg ../data/output/user106_341-poster 4 -> 3\n",
+      "../data/input/user106_346.jpg ../data/output/user106_346-poster 8 -> 7\n",
+      "../data/input/user147_2362.jpg ../data/output/user147_2362-poster 32 -> 11\n",
+      "../data/input/user147_2362.jpg ../data/output/user147_2362-device 46 -> 1\n",
+      "../data/input/test1.jpg ../data/output/test1-poster 15 -> 4\n",
+      "../data/input/test1.jpg ../data/output/test1-device 27 -> 2\n",
+      "../data/input/user99_310.jpg ../data/output/user99_310-device 14 -> 3\n"
      ]
     }
    ],
    "source": [
-    "from utils import green\n",
+    "from utils import categories\n",
     "\n",
     "for path  in img_fps:\n",
-    "    output_prefix = output_path(path,green)\n",
-    "    bitmoji = cv2.imread(path, 1)\n",
-    "    bitmoji = cv2.cvtColor(bitmoji, cv2.COLOR_BGR2RGB)\n",
-    "    hsv_bitmoji = cv2.cvtColor(bitmoji, cv2.COLOR_RGB2HSV)\n",
-    "    bounding_boxes = find_bounding_boxes(hsv_bitmoji,green)\n",
-    "    bef = len(bounding_boxes)\n",
-    "    bounding_boxes = write_bounding_boxes(bitmoji,\n",
-    "                                          bounding_boxes,\n",
-    "                                          output_prefix)\n",
-    "    print(path,bef,'->',len(bounding_boxes))"
+    "    for colour in categories:\n",
+    "        output_prefix = output_path(path,colour)\n",
+    "        bitmoji = cv2.imread(path, 1)\n",
+    "        bitmoji = cv2.cvtColor(bitmoji, cv2.COLOR_BGR2RGB)\n",
+    "        hsv_bitmoji = cv2.cvtColor(bitmoji, cv2.COLOR_RGB2HSV)\n",
+    "        bounding_boxes = find_bounding_boxes(hsv_bitmoji,colour)\n",
+    "        bef = len(bounding_boxes)\n",
+    "        bounding_boxes = write_bounding_boxes(bitmoji,\n",
+    "                                              bounding_boxes,\n",
+    "                                              output_prefix)\n",
+    "        if len(bounding_boxes): print(path,output_prefix,bef,'->',len(bounding_boxes))"
    ]
   },
   {
