pink refactored + csv coordinates

--- a/notebooks/Bitmoji_Parser.ipynb
+++ b/notebooks/Bitmoji_Parser.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        " '../data/input/user99_310.jpg']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,13 +76,17 @@
     "def write_bounding_boxes(img,\n",
     "                         bounding_boxes,\n",
     "                         img_prefix = \"../data/output/[image_name]-[category]\",\n",
+    "                         offset = 0,\n",
     "                         thresh = lambda x,y,w,h : h*w*1000 and w > 40 and h > 40):\n",
     "    # filter out noise based on preset threshold\n",
     "    bounding_boxes = [bb for bb in bounding_boxes if thresh(*bb)]\n",
+    "    object_ids = []\n",
     "    for i,[x,y,w,h] in enumerate(bounding_boxes):\n",
     "        section = img[y:y+h, x:x+w]\n",
-    "        cv2.imwrite(f\"{img_prefix}-{i}.png\", section[:,:,::-1])\n",
-    "    return bounding_boxes\n",
+    "        obj_id = i+offset\n",
+    "        object_ids.append(obj_id)\n",
+    "        cv2.imwrite(f\"{img_prefix}-{obj_id:03d}.png\", section[:,:,::-1])\n",
+    "    return bounding_boxes,object_ids\n",
     "\n",
     "\n",
     "def output_path(img_fp,colour_dict):\n",
@@ -90,32 +94,34 @@
     "    # Get rid of whatever is after the last period\n",
     "    img_pref = os.path.basename(img_fp).split('.')[0]\n",
     "    category = colour_dict['category']\n",
-    "    return f\"{direc}/{img_pref}-{category}\""
+    "    return f\"{direc}/{img_pref}_{category}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/input/user106_341.jpg ../data/output/user106_341-poster 4 -> 3\n",
-      "../data/input/user106_346.jpg ../data/output/user106_346-poster 8 -> 7\n",
-      "../data/input/user147_2362.jpg ../data/output/user147_2362-poster 32 -> 11\n",
-      "../data/input/user147_2362.jpg ../data/output/user147_2362-device 46 -> 1\n",
-      "../data/input/test1.jpg ../data/output/test1-poster 15 -> 4\n",
-      "../data/input/test1.jpg ../data/output/test1-device 27 -> 2\n",
-      "../data/input/user99_310.jpg ../data/output/user99_310-device 14 -> 3\n"
+      "../data/input/user106_341.jpg ../data/output/user106_341_poster 4 -> 3\n",
+      "../data/input/user106_346.jpg ../data/output/user106_346_poster 8 -> 7\n",
+      "../data/input/user147_2362.jpg ../data/output/user147_2362_poster 32 -> 11\n",
+      "../data/input/test1.jpg ../data/output/test1_poster 15 -> 4\n",
+      "../data/input/test1.jpg ../data/output/test1_device 13 -> 2\n",
+      "../data/input/user99_310.jpg ../data/output/user99_310_device 14 -> 3\n",
+      "30 rows and 7 columns\n"
      ]
     }
    ],
    "source": [
     "from utils import categories\n",
     "\n",
+    "series = []\n",
     "for path  in img_fps:\n",
+    "    offset = 0\n",
     "    for colour in categories:\n",
     "        output_prefix = output_path(path,colour)\n",
     "        bitmoji = cv2.imread(path, 1)\n",
@@ -123,10 +129,41 @@
     "        hsv_bitmoji = cv2.cvtColor(bitmoji, cv2.COLOR_RGB2HSV)\n",
     "        bounding_boxes = find_bounding_boxes(hsv_bitmoji,colour)\n",
     "        bef = len(bounding_boxes)\n",
-    "        bounding_boxes = write_bounding_boxes(bitmoji,\n",
+    "        bounding_boxes,object_ids = write_bounding_boxes(bitmoji,\n",
     "                                              bounding_boxes,\n",
-    "                                              output_prefix)\n",
-    "        if len(bounding_boxes): print(path,output_prefix,bef,'->',len(bounding_boxes))"
+    "                                              output_prefix,\n",
+    "                                              offset)\n",
+    "        offset += len(bounding_boxes)\n",
+    "        for [x,y,w,h],obj_id in zip(bounding_boxes,object_ids):\n",
+    "            row = [os.path.basename(path).split('.')[0], # image name\n",
+    "                   colour['category'], #category\n",
+    "                   obj_id,\n",
+    "                   x, #X1\n",
+    "                   x+w, #X2\n",
+    "                   y, #Y1\n",
+    "                   y+h #Y2\n",
+    "                  ]\n",
+    "            series.append(row)\n",
+    "        if len(bounding_boxes): print(path,output_prefix,bef,'->',len(bounding_boxes))\n",
+    "\n",
+    "coordinate_df = pd.DataFrame(series,columns=[\"Image Name\",\n",
+    "                                             \"Object Category\",\n",
+    "                                             \"Object ID\",\n",
+    "                                             \"X1 Coordinate\",\n",
+    "                                             \"X2 Coordinate\",\n",
+    "                                             \"Y1 Coordinate\",\n",
+    "                                             \"Y2 Coordinate\"]).sort_values([\"Image Name\",\"Object ID\"])\n",
+    "\n",
+    "print(\"{} rows and {} columns\".format(*coordinate_df.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinate_df.to_csv(\"../data/coordinates.csv\",index=False)"
    ]
   },
   {
