bitmoji working with "official" colours

--- a/notebooks/Bitmoji_Parser.ipynb
+++ b/notebooks/Bitmoji_Parser.ipynb
@@ -21,11 +21,11 @@
     {
      "data": {
       "text/plain": [
-       "['../data/input/user106_341.jpg',\n",
-       " '../data/input/user106_346.jpg',\n",
-       " '../data/input/user147_2362.jpg',\n",
-       " '../data/input/test1.jpg',\n",
-       " '../data/input/user99_310.jpg']"
+       "['../data/input/user187_3652.jpg',\n",
+       " '../data/input/user9_3238.jpg',\n",
+       " '../data/input/user9_4519.jpg',\n",
+       " '../data/input/user186_4803.jpg',\n",
+       " '../data/input/user184_2400.jpg']"
       ]
      },
      "execution_count": 1,
@@ -106,13 +106,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/input/user106_341.jpg ../data/output/user106_341_poster 4 -> 3\n",
-      "../data/input/user106_346.jpg ../data/output/user106_346_poster 8 -> 7\n",
-      "../data/input/user147_2362.jpg ../data/output/user147_2362_poster 32 -> 11\n",
-      "../data/input/test1.jpg ../data/output/test1_poster 15 -> 4\n",
-      "../data/input/test1.jpg ../data/output/test1_device 13 -> 2\n",
-      "../data/input/user99_310.jpg ../data/output/user99_310_device 14 -> 3\n",
-      "30 rows and 7 columns\n"
+      "../data/input/user187_3652.jpg ../data/output/user187_3652_04_pink 1 -> 1\n",
+      "../data/input/user9_3238.jpg ../data/output/user9_3238_01_lime 3 -> 3\n",
+      "../data/input/user9_3238.jpg ../data/output/user9_3238_02_orange 7 -> 4\n",
+      "../data/input/user9_3238.jpg ../data/output/user9_3238_03_blue 10 -> 1\n",
+      "../data/input/user9_4519.jpg ../data/output/user9_4519_01_lime 4 -> 1\n",
+      "../data/input/user9_4519.jpg ../data/output/user9_4519_03_blue 16 -> 3\n",
+      "../data/input/user9_4519.jpg ../data/output/user9_4519_04_pink 2 -> 2\n",
+      "../data/input/user184_2400.jpg ../data/output/user184_2400_01_lime 4 -> 4\n",
+      "../data/input/user184_2400.jpg ../data/output/user184_2400_02_orange 1 -> 1\n",
+      "../data/input/user184_2400.jpg ../data/output/user184_2400_03_blue 3 -> 2\n",
+      "../data/input/user184_2400.jpg ../data/output/user184_2400_04_pink 1 -> 1\n",
+      "23 rows and 7 columns\n"
      ]
     }
    ],
