--- a/notebooks/Bitmoji_Parser.ipynb
+++ b/notebooks/Bitmoji_Parser.ipynb
@@ -64,8 +64,10 @@
     "    masked_img = cv2.bitwise_and(hsv_img, hsv_img, mask = mask)\n",
     "    # Converting the image to grayscale helps with the findContours function\n",
     "    masked_grey = cv2.cvtColor(masked_img, cv2.COLOR_BGR2GRAY)\n",
+    "    # Smoothing without removing edges.\n",
+    "    bi_lat = cv2.bilateralFilter(masked_grey, 7, 50, 50)\n",
     "    # Adding a bit of blur and then thresholding helps reduce noise\n",
-    "    blurred = cv2.blur(masked_grey, (3,3))\n",
+    "    blurred = cv2.blur(bi_lat, (3,3))\n",
     "    #Apply thresholding to the image\n",
     "    ret, thresholded = cv2.threshold(blurred, 1, 255, cv2.THRESH_OTSU)\n",
     "    contours, hierarchy = cv2.findContours(thresholded,cv2.RETR_EXTERNAL,cv2.CHAIN_APPROX_SIMPLE)\n",
@@ -109,9 +111,9 @@
       "../data/input/user187_3652.jpg ../data/output/user187_3652_04_pink 1 -> 1\n",
       "../data/input/user9_3238.jpg ../data/output/user9_3238_01_lime 3 -> 3\n",
       "../data/input/user9_3238.jpg ../data/output/user9_3238_02_orange 7 -> 4\n",
-      "../data/input/user9_3238.jpg ../data/output/user9_3238_03_blue 10 -> 1\n",
+      "../data/input/user9_3238.jpg ../data/output/user9_3238_03_blue 1 -> 1\n",
       "../data/input/user9_4519.jpg ../data/output/user9_4519_01_lime 4 -> 1\n",
-      "../data/input/user9_4519.jpg ../data/output/user9_4519_03_blue 16 -> 3\n",
+      "../data/input/user9_4519.jpg ../data/output/user9_4519_03_blue 3 -> 3\n",
       "../data/input/user9_4519.jpg ../data/output/user9_4519_04_pink 2 -> 2\n",
       "../data/input/user184_2400.jpg ../data/output/user184_2400_01_lime 4 -> 4\n",
       "../data/input/user184_2400.jpg ../data/output/user184_2400_02_orange 1 -> 1\n",
