facial segmentation not great but kind of works lol

--- a/notebooks/Bitmoji_Parser.ipynb
+++ b/notebooks/Bitmoji_Parser.ipynb
@@ -81,7 +81,15 @@
     "    # Get rid of whatever is after the last period\n",
     "    img_pref = os.path.basename(img_fp).split('.')[0]\n",
     "    category = colour_dict['category']\n",
-    "    return img_pref, f\"{direc}/{img_pref}_{category}\""
+    "    return img_pref, f\"{direc}/{img_pref}_{category}\"\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Parse bounding boxes"
    ]
   },
   {
@@ -140,11 +148,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## (NOT GREAT) Parse faces"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "face_cascade = cv2.CascadeClassifier(\"./haarcascade_frontalface_default.xml\")\n",
+    "def get_face_colour(img,\n",
+    "                    thresh = lambda x,y,w,h : h*w*1000 and w > 40 and h > 40):\n",
+    "    faces = face_cascade.detectMultiScale(\n",
+    "        hsv_bitmoji,\n",
+    "        minNeighbors=5,\n",
+    "        minSize=(30, 30),\n",
+    "        flags = cv2.CASCADE_SCALE_IMAGE)\n",
+    "    # filter out noise based on preset threshold\n",
+    "    faces = [f for f in faces if thresh(*f)]"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "series = []\n",
+    "for path  in img_fps:\n",
+    "    bitmoji = cv2.imread(path, 1)\n",
+    "    bitmoji = cv2.cvtColor(bitmoji, cv2.COLOR_BGR2RGB)\n",
+    "    hsv_bitmoji = cv2.cvtColor(bitmoji, cv2.COLOR_RGB2HSV)\n",
+    "    \n",
+    "faces_df = pd.DataFrame(series,columns=[\"Image Name\",\n",
+    "                                        \"Face Number\",\n",
+    "                                        \"Hex Code\",\n",
+    "                                        \"X1 Coordinate\",\n",
+    "                                        \"X2 Coordinate\",\n",
+    "                                        \"Y1 Coordinate\",\n",
+    "                                        \"Y2 Coordinate\"]).sort_values([\"Image Name\",\"Object ID\"])\n",
+    "\n",
+    "print(\"{} rows and {} columns\".format(*coordinate_df.shape))"
+   ]
   }
  ],
  "metadata": {
