--- a/notebooks/Via_Bitmoji_Parser.ipynb
+++ b/notebooks/Via_Bitmoji_Parser.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,7 @@
     "VIA_PATH = '../data/via_coordinates.csv'\n",
     "IMG_FOLDER = '../data/input/'\n",
     "OUTPUT_FOLDER = '../data/output/'\n",
+    "\n",
     "via_output = pd.read_csv(VIA_PATH)\n",
     "# Get the type out of the dictionary (should only be one?)\n",
     "via_output['type'] = pd.json_normalize(via_output['region_attributes'].map(json.loads))"
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +64,7 @@
        "Length: 110, dtype: bool"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +106,6 @@
     "}\n",
     "    \n",
     "def parse_image(row):\n",
-    "    \n",
     "    # Parse region_shape_attributes column as a dictionary\n",
     "    reg = json.loads(row['region_shape_attributes'])\n",
     "    # Image meta data\n",
@@ -118,10 +118,14 @@
     "    parse_func = PARSE_MAP[shape]\n",
     "    img = cv2.imread(f\"{IMG_FOLDER}{file_name}\", 1)\n",
     "    section = parse_func(img,reg)\n",
+    "    # Get rid of the JPG at the end\n",
     "    out_fname = file_name.split(\".\")[0]\n",
+    "    # Replace any whitespace or slashes with underscores\n",
     "    region_type = region_type.replace(\" \",\"_\").replace(\"/\",\"_\")\n",
+    "    # Put the filename back together\n",
     "    out_fname = f\"{out_fname}_{region_type}-{region_id}.jpg\"\n",
     "    output_path = f\"{OUTPUT_FOLDER}{out_fname}\"\n",
+    "    # Write the image to the output folder\n",
     "    cv2.imwrite(output_path, section)\n",
     "    return True\n",
     "    \n",
